--- a/style.css
+++ b/style.css
@@ -303,7 +303,7 @@ section {
   .about-pic {
     border-radius: 2rem;
   }
-  
+              
   .arrow {
     position: absolute;
     right: -5rem;
@@ -331,3 +331,44 @@ section {
     margin: auto 0;
   }
   
+
+  /* EXPERIENCE SECTION */
+
+
+#experience {
+  position: relative;
+}
+
+.experience-sub-title {
+  color: rgb(85, 85, 85);
+  font-weight: 600;
+  font-size: 1.75rem;
+  margin-bottom: 2rem;
+}
+
+
+.experience-details-container {
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+}
+
+.article-container {
+  display: flex;
+  text-align: initial;
+  flex-wrap: wrap;
+  flex-direction: row;
+  gap: 2.5rem;
+  justify-content: space-around;
+}
+
+article {
+  display: flex;
+  width: 10rem;
+  justify-content: space-around;
+  gap: 0.5rem;
+}
+
+article .icon {
+  cursor: default;
+}
