--- a/mediaqueries.css
+++ b/mediaqueries.css
@@ -1,3 +1,14 @@
+@media screen and (max-width:1400px) {
+  #profile {
+    height: 1;
+  }
+} 
+
+
+
+
+
+
 @media screen and (max-width:1200px) {
     #desktop-nav {
         display: none;
