--- a/style.css
+++ b/style.css
@@ -447,3 +447,12 @@ article .icon {
 }
 
 /* FOOTER SECTION */
+
+footer {
+  height: 26vh;
+  margin: 0 1rem;
+}
+
+footer p {
+  text-align: center;
+}
