--- a/style.css
+++ b/style.css
@@ -1,8 +1,6 @@
 /*General */
 
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600&display=swap');
-
-
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600&display=swap");
 
 /* Margin > border> padding > content */
 /* padding + content is background colour (Whats inside the border) */
@@ -11,10 +9,9 @@
 /* h1, h2 = h1 and h2 */
 /* h1 h2 = all h2 inside h1 */
 
-
 * {
-    margin:0;
-    padding:0;
+    margin: 0;
+    padding: 0;
 }
 
 body {
@@ -31,26 +28,27 @@ p {
 
 /* TRANSMITION */
 
-
-a, .btn {
+a,
+.btn {
     transition: all 300ms ease;
 }
 
 /* DESKTOP NAV */
 
-nav, .nav-links {
+nav,
+.nav-links {
     display: flex;
 }
 
 nav {
-    justify-content: space-around;   /* Main (horiozontal) axis */
-    align-items: center;    /* Cross (vertical) axis */
+    justify-content: space-around; /* Main (horiozontal) axis */
+    align-items: center; /* Cross (vertical) axis */
     height: 17vh;
 }
 
 .nav-links {
     gap: 2rem;
-    list-style:none;
+    list-style: none;
     font-size: 1.5rem;
 }
 
@@ -77,7 +75,6 @@ a:hover {
 
 /* HAMBURGER */
 
-
 #hamburger-nav {
     display: none;
 }
@@ -96,35 +93,32 @@ a:hover {
     cursor: pointer;
 }
 
-
 .hamburger-icon span {
-    width:100%;
-    height:2px;
+    width: 100%;
+    height: 2px;
     background-color: black;
     transition: all 0.3 ease-in-out;
-}  
+}
 
 .menu-links {
     position: absolute;
     top: 100%;
     right: 0;
     background-color: white;
-    width:fit-content;
+    width: fit-content;
     max-height: 0;
     overflow: hidden;
     transition: all 0.3 ease-in-out;
-
 }
 
 .menu-links a {
-    display:block;
+    display: block;
     padding: 10px;
     text-align: center;
     font-size: 1.5rem;
-    color:  black;
+    color: black;
     text-decoration: none;
     transition: all 0.3 ease-in-out;
-
 }
 
 .menu-links li {
@@ -134,7 +128,6 @@ a:hover {
 .menu-links.open {
     max-height: 300px;
 }
-
 
 .hamburger-icon.open span:first-child {
     transform: rotate(45deg) translate(10px, 5px);
@@ -148,9 +141,8 @@ a:hover {
     transform: rotate(-45deg) translate(10px, -5px);
 }
 
-
 .hamburger-icon span:first-child {
-    transform: none; 
+    transform: none;
 }
 
 .hamburger-icon span:first-child {
@@ -161,7 +153,6 @@ a:hover {
     transform: none;
 }
 
-
 /* SECTIONS */
 
 section {
@@ -170,155 +161,154 @@ section {
     margin: 0 10rem;
     box-sizing: border-box;
     min-height: fit-content;
-  }
-  
-  .section-container {
+}
+
+.section-container {
     display: flex;
-  }
-  
-  /* PROFILE SECTION */
-  
-  #profile {
+}
+
+/* PROFILE SECTION */
+
+#profile {
     display: flex;
     justify-content: center;
     gap: 5rem;
     height: 80vh;
-  }
-  
-  .section__pic-container {
+}
+
+.section__pic-container {
     display: flex;
     height: 400px;
     width: 400px;
     margin: auto 0;
-  }
+}
 
-  #profile .section__pic-container {
-    background: linear-gradient(to bottom, #212020, grey); 
+#profile .section__pic-container {
+    background: linear-gradient(to bottom, #212020, grey);
     /* background: radial-gradient(circle, black 30%, grey 70%, black);  */
     border-radius: 50%;
-  }
-  
-  #profile .about-pic {
+}
+
+#profile .about-pic {
     width: 100%;
     height: auto;
     border-radius: 50%;
-  }
-  
-  .section__text {
+}
+
+.section__text {
     align-self: center;
     text-align: center;
-  }
-  
-  .section__text p {
+}
+
+.section__text p {
     font-weight: 600;
-  }
-  
-  .section__text__p1 {
+}
+
+.section__text__p1 {
     text-align: center;
-  }
-  
-  .section__text__p2 {
+}
+
+.section__text__p2 {
     font-size: 1.75rem;
     margin-bottom: 1rem;
-  }
-  
-  .title {
+}
+
+.title {
     font-size: 3rem;
     text-align: center;
-  }
-  
-  #socials-container {
+}
+
+#socials-container {
     display: flex;
     justify-content: center;
     margin-top: 1rem;
     gap: 1rem;
+}
 
-  }
-  
-  /* ICONS */
-  
-  .icon {
+/* ICONS */
+
+.icon {
     cursor: pointer;
     height: 2rem;
-  }
-  
-  /* BUTTONS */
-  
-  .btn-container {
+}
+
+/* BUTTONS */
+
+.btn-container {
     display: flex;
     justify-content: center;
     gap: 1rem;
-  }
-  
-  .btn {
+}
+
+.btn {
     font-weight: 600;
     transition: all 300ms ease;
     padding: 1rem;
     width: 8rem;
     border-radius: 2rem;
-  }
-  
-  .btn-color-1,
-  .btn-color-2 {
+}
+
+.btn-color-1,
+.btn-color-2 {
     border: rgb(53, 53, 53) 0.1rem solid;
-  }
-  
-  .btn-color-1:hover,
-  .btn-color-2:hover {
+}
+
+.btn-color-1:hover,
+.btn-color-2:hover {
     cursor: pointer;
-  }
-  
-  .btn-color-1,
-  .btn-color-2:hover {
+}
+
+.btn-color-1,
+.btn-color-2:hover {
     background: rgb(53, 53, 53);
     color: white;
-  }
-  
-  .btn-color-1:hover {
-    background: rgb(0, 0, 0);
-  }
-  
-  .btn-color-2 {
-    background: none;
-  }
-  
-  .btn-color-2:hover {
-    border: rgb(255, 255, 255) 0.1rem solid;
-  }
-  
-  .btn-container {
-    gap: 1rem;
-  }
+}
 
-  /* ABOUT SECTION */
-  
-  #about {
+.btn-color-1:hover {
+    background: rgb(0, 0, 0);
+}
+
+.btn-color-2 {
+    background: none;
+}
+
+.btn-color-2:hover {
+    border: rgb(255, 255, 255) 0.1rem solid;
+}
+
+.btn-container {
+    gap: 1rem;
+}
+
+/* ABOUT SECTION */
+
+#about {
     position: relative;
-  }
-  
-  .about-containers {
+}
+
+.about-containers {
     gap: 2rem;
     margin-bottom: 2rem;
     margin-top: 2rem;
-  }
-  
-  .about-details-container {
+}
+
+.about-details-container {
     justify-content: center;
     flex-direction: column;
-  }
-  
-  .about-containers,
-  .about-details-container {
+}
+
+.about-containers,
+.about-details-container {
     display: flex;
-  }
-         
-  .arrow {
+}
+
+.arrow {
     position: absolute;
     right: -5rem;
     bottom: 2.5rem;
-  }
-  
-  .details-container {
+}
+
+.details-container {
     padding: 1.5rem;
     flex: 1;
     background: white;
@@ -326,178 +316,174 @@ section {
     border: rgb(53, 53, 53) 0.1rem solid;
     border-color: rgb(163, 163, 163);
     text-align: center;
-  }
-  
-  .section-container {
+}
+
+.section-container {
     gap: 4rem;
     height: 80%;
-  }
+}
 
-  .about-pic {
+.about-pic {
     border-radius: 2rem;
-  }
-       
-  
-  .section__pic-container {
+}
+
+.section__pic-container {
     height: 400px;
     width: 400px;
     margin: auto 0;
-  }
+}
 
-  #about .section__pic-container {
-    background: linear-gradient(to bottom, #212020, grey); 
-    background: radial-gradient( rgb(32, 32, 32)30%, rgb(75, 73, 73) 60%, grey); /* Custom gradient */
-    background: radial-gradient(circle, rgb(171, 169, 169)30%, rgb(244, 243, 243) 60%, rgb(197, 194, 194)); /* Custom gradient */
-    border-radius: 10%; 
-  }
-  
-  
-
-
+#about .section__pic-container {
+    background: linear-gradient(to bottom, #212020, grey);
+    background: radial-gradient(
+        rgb(32, 32, 32) 30%,
+        rgb(75, 73, 73) 60%,
+        grey
+    ); /* Custom gradient */
+    background: radial-gradient(
+        circle,
+        rgb(171, 169, 169) 30%,
+        rgb(244, 243, 243) 60%,
+        rgb(197, 194, 194)
+    ); /* Custom gradient */
+    border-radius: 10%;
+}
 
 /* EXPERIENCE SECTION */
 
 #experience {
-  position: relative;
+    position: relative;
 }
 
 .experience-sub-title {
-  color: rgb(85, 85, 85);
-  font-weight: 600;
-  font-size: 1.75rem;
-  margin-bottom: 2rem;
+    color: rgb(85, 85, 85);
+    font-weight: 600;
+    font-size: 1.75rem;
+    margin-bottom: 2rem;
 }
 
 .experience-details-container {
-  display: flex;
-  justify-content: center;
-  flex-direction: column;
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
 }
 
 .article-container {
-  display: flex;
-  text-align: initial;
-  flex-wrap: wrap;
-  flex-direction: row;
-  gap: 2.5rem;
-  justify-content: space-around;
+    display: flex;
+    text-align: initial;
+    flex-wrap: wrap;
+    flex-direction: row;
+    gap: 2.5rem;
+    justify-content: space-around;
 }
 
 article {
-  display: flex;
-  width: 10rem;
-  justify-content:left;
-  gap: 0.5rem;
+    display: flex;
+    width: 10rem;
+    justify-content: left;
+    gap: 0.5rem;
 }
 
 article .icon {
-  cursor: default;
+    cursor: default;
 }
 
 /* PROJECTS */
 #projects {
-  position: relative;
+    position: relative;
 }
 
 .color-container {
-  border-color: rgb(163, 163, 163);
-  background: rgb(250, 250, 250);
+    border-color: rgb(163, 163, 163);
+    background: rgb(250, 250, 250);
 }
 
 .project-img {
-  border-radius: 2rem;
-  width: 90%;
-  height: 90%;
+    border-radius: 2rem;
+    width: 90%;
+    height: 90%;
 }
 
 .project-title {
-  margin: 1rem;
-  color: black;
+    margin: 1rem;
+    color: black;
 }
 
 .project-btn {
-  color: black;
-  border-color: rgb(163, 163, 163);
+    color: black;
+    border-color: rgb(163, 163, 163);
 }
-
-
 
 /* CONTACT */
 
 #contact {
-  display: flex;
-  justify-content: center;
-  flex-direction: column;
-  height: 70vh;
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    height: 70vh;
 }
-
-
-
 
 .contact-info-upper-container {
-  display: flex;
-  justify-content: center;
-  border-radius: 2rem;
-  border: rgb(53, 53, 53) 0.1rem solid;
-  border-color: rgb(163, 163, 163);
-  background: (250, 250, 250);
-  margin: 2rem auto;
-  padding: 0.5rem;
+    display: flex;
+    justify-content: center;
+    border-radius: 2rem;
+    border: rgb(53, 53, 53) 0.1rem solid;
+    border-color: rgb(163, 163, 163);
+    background: (250, 250, 250);
+    margin: 2rem auto;
+    padding: 0.5rem;
 }
-
 
 .contact-info-container {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  gap: 0.5rem;
-  margin: 1rem;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 0.5rem;
+    margin: 1rem;
 }
 
-
 .contact-info-container p {
-  font-size: larger;
+    font-size: larger;
 }
 
 .contact-icon {
-  cursor: default;
+    cursor: default;
 }
 
 .email-icon {
-  height: 2.5rem;
+    height: 2.5rem;
 }
 
 /* FOOTER SECTION */
 
 footer {
-  height: 26vh;
-  margin: 0 1rem;
+    height: 26vh;
+    margin: 0 1rem;
 }
 
 footer p {
-  text-align: center;
+    text-align: center;
 }
-
 
 /* Temp */
 #projects .experience-details-container {
-  display: none;
+    display: none;
 }
 
 .Temp {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-direction: column;
-  gap: 4rem;
-  height: 80vh;
-  background: white;
-  border-radius: 2rem;
-  border: rgb(53, 53, 53) 0.1rem solid;
-  border-color: rgb(163, 163, 163);
-  text-align: center;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    gap: 4rem;
+    height: 80vh;
+    background: white;
+    border-radius: 2rem;
+    border: rgb(53, 53, 53) 0.1rem solid;
+    border-color: rgb(163, 163, 163);
+    text-align: center;
 }
 
-.Under-dev{
-  font-size: 2rem;
+.Under-dev {
+    font-size: 2rem;
 }
